--- a/vars/main.yml
+++ b/vars/main.yml
@@ -2,136 +2,131 @@
 # vars file for ansible-role-rgm
 # vim: bs=2 sw=2 expandtab:
 
+### Mariadb ###
+mariadb:
+  socket: "/var/lib/mysql/mysql.sock"
+
 ### RPM packages ###
-packages_system:
-- bash-completion
-- bzip2
-- vim
-- sudo
-- net-snmp
-- snmptt
-- chrony
-- net-tools
-- htop
-- iftop
-- iotop
-- telnet
-- sysstat
-- strace
-- lsof
-- nmap
-- tcpdump
-- dos2unix
-- mlocate
-- firewalld
-- perl-version
-- perl-Monitoring-Plugin
-- perl-IO-Socket-INET6
-- perl-Number-Format
-- perl-DateTime
-- perl-Crypt-SSLeay
-- perl-Switch
-- perl-IPC-Cmd
-- ruby
-- python2-jmespath
-
-packages_mariadb:
-- mariadb-server
-- mariadb
-- python2-PyMySQL
-
-packages_apache:
-- httpd
-- mod_perl
-- mod_ssl
-- mod_fcgid
-- php
-- php-mysqlnd
-- php-ldap
-- php-process
-- php-xml
-- php-snmp
-- php-mcrypt
-
-packages_elastic:
-- java-11-openjdk-headless
-- elasticsearch-oss
-- elasticsearch-curator
-- metricbeat
-- filebeat
-- kibana-oss
-
-packages_influx_grafana:
-- influxdb
-- nagflux
-- histou
-- grafana
-- nodejs
-- grafana-dashboards
-
-packages_rgm:
-- python-dateutil
-- mk-livestatus
-- nagios
-- nagios-plugins
-- nagios-plugins-rgm
-- nagvis
-- nagiosbp
-- notifier
-- nrdp
-- ged
-- ged-mysql
-- thruk
-- lilac
-- rgmweb
-- rgmapi
-- rgm-distrib-beats
-- snmp2elastic
-- wmi
-
-packages_prometheus:
-- prometheus
-- prometheus-node_exporter
-- prometheus-pushgateway
-- prometheus-snmp_exporter
-- prometheus-blackbox_exporter
-- prometheus-ping_exporter
-- prometheus-elasticsearch_exporter
-
-packages_python36:
-- python36
-- python36-crypto
-- python36-cryptography
-- python36-pyasn1
-- python36-PyMySQL
-- python36-cffi
-- python36-chardet
-- python36-dateutil
-- python36-decorator
-- python36-gobject-base
-- python36-idna
-- python36-jinja2
-- python36-kitchen
-- python36-libs
-- python36-markupsafe
-- python36-paramiko
-- python36-ply
-- python36-pycparser
-- python36-pycurl
-- python36-requests
-- python36-setuptools
-- python36-six
-- python36-urllib3
-- python36-mysql
-
-# partners packages list (oracle, vmware, etc.) is built at run-time
-packages_partners: []
+packages:
+  mariadb:
+    - mariadb-server
+    - mariadb
+    - python2-PyMySQL
+  system:
+    - bash-completion
+    - bzip2
+    - vim
+    - sudo
+    - net-snmp
+    - snmptt
+    - chrony
+    - net-tools
+    - htop
+    - iftop
+    - iotop
+    - telnet
+    - sysstat
+    - strace
+    - lsof
+    - nmap
+    - tcpdump
+    - dos2unix
+    - mlocate
+    - firewalld
+    - perl-version
+    - perl-Monitoring-Plugin
+    - perl-IO-Socket-INET6
+    - perl-Number-Format
+    - perl-DateTime
+    - perl-Crypt-SSLeay
+    - perl-Switch
+    - perl-IPC-Cmd
+    - ruby
+    - python2-jmespath
+  apache:
+    - httpd
+    - mod_perl
+    - mod_ssl
+    - mod_fcgid
+    - php
+    - php-mysqlnd
+    - php-ldap
+    - php-process
+    - php-xml
+    - php-snmp
+    - php-mcrypt
+  elastic:
+    - java-11-openjdk-headless
+    - elasticsearch-oss
+    - elasticsearch-curator
+    - metricbeat
+    - filebeat
+    - kibana-oss
+  influx_grafana:
+    - influxdb
+    - nagflux
+    - histou
+    - grafana
+    - nodejs
+    - grafana-dashboards
+  rgm:
+    - python-dateutil
+    - mk-livestatus
+    - nagios
+    - nagios-plugins
+    - nagios-plugins-rgm
+    - nagvis
+    - nagiosbp
+    - notifier
+    - nrdp
+    - ged
+    - ged-mysql
+    - thruk
+    - lilac
+    - rgmweb
+    - rgmapi
+    - rgm-distrib-beats
+    - snmp2elastic
+    - wmi
+  prometheus:
+    - prometheus
+    - prometheus-node_exporter
+    - prometheus-pushgateway
+    - prometheus-snmp_exporter
+    - prometheus-blackbox_exporter
+    - prometheus-ping_exporter
+    - prometheus-elasticsearch_exporter
+  python36:
+    - python36
+    - python36-crypto
+    - python36-cryptography
+    - python36-pyasn1
+    - python36-PyMySQL
+    - python36-cffi
+    - python36-chardet
+    - python36-dateutil
+    - python36-decorator
+    - python36-gobject-base
+    - python36-idna
+    - python36-jinja2
+    - python36-kitchen
+    - python36-libs
+    - python36-markupsafe
+    - python36-paramiko
+    - python36-ply
+    - python36-pycparser
+    - python36-pycurl
+    - python36-requests
+    - python36-setuptools
+    - python36-six
+    - python36-urllib3
+    - python36-mysql
+  partners: []
 
 # RGM repositories
 enable_rgm_repo_business: false
 
 prometheus_mysql_cnf: /var/lib/prometheus/.my.cnf
-
 
 eshq_git_repo: https://github.com/ElasticHQ/elasticsearch-HQ.git
 eshq_version: v3.5.12
@@ -140,67 +135,65 @@ eshq_venv: /opt/pyvenv_eshq
 eshq_user: elastichq
 eshq_group: elastichq
 
-
 # patterns (regex) of Elsticsearch indexes to automatically close and delete with Curator
 # this is used in 'curator_actions.yml.j2' Jinja template
 curator_patterns:
-- '^[a-z]+beat-.*'
-- '^rgm[\w\d]+-.*'
+  - '^[a-z]+beat-.*'
+  - '^rgm[\w\d]+-.*'
 
-# RPM packages related to RGM core services 
+# RPM packages related to RGM core services
 rgm_services:
-- chronyd
-- firewalld
-- rsyslog
-- snmpd
-- snmptrapd
-- elasticsearch
-- mariadb
-- metricbeat
-- influxdb
-- nagflux
-- grafana-server
-- gedd
-- snmptt
-- nagios
-- httpd
-- kibana
-- snmp2elastic
-#- prometheus
+  - chronyd
+  - firewalld
+  - rsyslog
+  - snmpd
+  - snmptrapd
+  - elasticsearch
+  - mariadb
+  - metricbeat
+  - influxdb
+  - nagflux
+  - grafana-server
+  - gedd
+  - snmptt
+  - nagios
+  - httpd
+  - kibana
+  - snmp2elastic
 
-# Grafana core plugins (officially maintained by Grafana team)  
+# Grafana core plugins (officially maintained by Grafana team)
 grafana_plugins_core:
-- grafana-simple-json-datasource
-- grafana-worldmap-panel
-- grafana-clock-panel
-- grafana-piechart-panel
-- grafana-polystat-panel
+  - grafana-simple-json-datasource
+  - grafana-worldmap-panel
+  - grafana-clock-panel
+  - grafana-piechart-panel
+  - grafana-polystat-panel
 
-# Grafana 3rd party plugins (maintained by contributors)  
+# Grafana 3rd party plugins (maintained by contributors)
 grafana_plugins_contrib:
-- fetzerch-sunandmoon-datasource
-- satellogic-3d-globe-panel
-- ryantxu-ajax-panel
-- michaeldmoore-annunciator-panel
-- farski-blendstat-panel
-- yesoreyeram-boomtable-panel
-- briangann-gauge-panel
-- briangann-datatable-panel
-- jdbranham-diagram-panel
-- natel-discrete-panel
-- larona-epict-panel
-- agenty-flowcharting-panel
-- mtanda-histogram-panel
-- natel-influx-admin-panel
-- michaeldmoore-multistat-panel
-- digiapulssi-organisations-panel
-- bessler-pictureit-panel
-- natel-plotly-panel
-- corpglory-progresslist-panel
-- snuids-radar-panel
-- scadavis-synoptic-panel
-- marcuscalidus-svg-panel
-- gretamosa-topology-panel
+  - fetzerch-sunandmoon-datasource
+  - satellogic-3d-globe-panel
+  - ryantxu-ajax-panel
+  - michaeldmoore-annunciator-panel
+  - farski-blendstat-panel
+  - yesoreyeram-boomtable-panel
+  - briangann-gauge-panel
+  - briangann-datatable-panel
+  - jdbranham-diagram-panel
+  - natel-discrete-panel
+  - larona-epict-panel
+  - agenty-flowcharting-panel
+  - mtanda-histogram-panel
+  - natel-influx-admin-panel
+  - michaeldmoore-multistat-panel
+  - digiapulssi-organisations-panel
+  - bessler-pictureit-panel
+  - natel-plotly-panel
+  - corpglory-progresslist-panel
+  - snuids-radar-panel
+  - scadavis-synoptic-panel
+  - marcuscalidus-svg-panel
+  - gretamosa-topology-panel
 
 
 # Official RGM repositories
@@ -300,7 +293,7 @@ es_group: elasticsearch
 
 
 apache_httpd_default_conf_to_disable:
-- autoindex.conf
-- userdir.conf
-- welcome.conf
-- ssl.conf
+  - autoindex.conf
+  - userdir.conf
+  - welcome.conf
+  - ssl.conf
