--- a/vars/main.yml
+++ b/vars/main.yml
@@ -6,6 +6,10 @@
 mariadb:
   socket: "/var/lib/mysql/mysql.sock"
 
+bed:
+  stargate_scc:
+    health_url: 'https://heavendoor.scc-services.fr/api/v1/health'
+
 ### RPM packages ###
 packages:
   mariadb:
