--- a/vars/main.yml
+++ b/vars/main.yml
@@ -49,15 +49,13 @@ packages:
     - python2-jmespath
   apache:
     - httpd
+    - php-fpm
     - mod_perl
     - mod_ssl
-    - mod_fcgid
     - php
     - php-mysqlnd
     - php-ldap
-    - php-process
     - php-xml
-    - php-snmp
     - php-mcrypt
   elastic:
     - java-11-openjdk-headless
