--- a/tasks/http/http_configure.yml
+++ b/tasks/http/http_configure.yml
@@ -61,7 +61,10 @@
     - { src: '00_hardening.conf',  dst: '00_hardening.conf'} # noqa yaml[commas]
     - { src: 'ssl.conf',           dst: '10_ssl.conf'} # noqa yaml[commas]
     - { src: 'zz_elastic_hq.conf', dst: 'zz_elastic_hq.conf.disabled'} # noqa yaml[commas]
-  notify: "Service reload http"
+    - { src: '00_fpm.conf',        dst: '00_fpm.conf'}  # noqa yaml[commas]
+  notify:
+    - "Service reload http"
+    - "Service reload fpm"
   ansible.builtin.template:
     src: "httpd/{{ item.src }}.j2"
     dest: "/etc/httpd/conf.d/{{ item.dst }}"
