fix: rawhide file variable

--- a/tasks/prerequisites/prerequisites_rawhide.yml
+++ b/tasks/prerequisites/prerequisites_rawhide.yml
@@ -5,7 +5,7 @@
     - { filename: rgm, section: 'rgm-community-stable' }
   notify: "Yum regenerate cache"
   community.general.ini_file:
-    path: "/etc/yum.repos.d/{{ item.path }}.repo"
+    path: "/etc/yum.repos.d/{{ item.filename }}.repo"
     section: "{{ item.section }}"
     option: "enabled"
     value: "0"
@@ -19,7 +19,7 @@
     - { filename: rgm, section: 'rgm-community-rawhide' }
   notify: "Yum regenerate cache"
   community.general.ini_file:
-    path: "/etc/yum.repos.d/{{ item.path }}.repo"
+    path: "/etc/yum.repos.d/{{ item.filename }}.repo"
     section: "{{ item.section }}"
     option: "enabled"
     value: "1"
