--- a/handlers/main.yml
+++ b/handlers/main.yml
@@ -111,3 +111,9 @@
     name: xinetd
     state: restarted
     enabled: true
+
+- name: "Service restart sshd"
+  ansible.builtin.systemd:
+    name: sshd
+    state: restarted
+    enabled: true
