fix(grafana): versionlock before any install

--- a/tasks/rgm/rgm_packages.yml
+++ b/tasks/rgm/rgm_packages.yml
@@ -1,4 +1,28 @@
 ---
+- name: 'RGM | Packages | Ensure dnf versionlock is present'
+  ansible.builtin.yum:
+    update_cache: false
+    name: "python3-dnf-plugin-versionlock"
+    state: present
+
+- name: 'RGM | Packages | Copy grafana repository to fix version (else appstream repository is used)'
+  ansible.builtin.copy:
+    src: "grafana/grafana.repo"
+    dest: "/etc/yum.repos.d/grafana.repo"
+    owner: root
+    group: root
+    mode: "0644"
+
+- name: "RGM | Packages | Yum regenerate cache"
+  ansible.builtin.yum:
+    update_cache: true
+
+- name: "RGM | Packages | Prevent grafana version 6.4.0 from being updated"
+  community.general.dnf_versionlock:
+    state: present
+    name:
+      - grafana-6.4.0-1.x86_64
+
 - name: "RGM | Packages | Install RGM Packages (it may take some time...)"
   retries: 10
   delay: 2
